[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pa-python-tools"
version = "0.1.3"
description = "Collection of Python tools and helpers"
readme = "README.md"
authors = [{ name = "Pierre Anken", email = "pierre@anken.ch" }]
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]